--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "timestampmicroservice",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.8.1"
-  }
+    "name": "timestampmicroservice",
+    "version": "0.0.0",
+    "private": true,
+    "engines": {
+        "node": "7.6.0",
+        "npm": "4.1.2"
+    },
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "debug": "~2.6.3",
+        "express": "~4.15.2",
+        "jade": "~1.11.0",
+        "morgan": "~1.8.1"
+    }
 }
